--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,6 +40,7 @@ html {
 
   --background-color:#1A1815;
   --text-color:#888888;
+  --color-active:#829769;
   --text-hover-color:#a8a8a8;
   --cell-black: #B58863;
   --cell-white: #F0D9B5;
