--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import './normalize.css';
+
 @font-face {
   font-family: "OpenSans";
   src: url("../assets/fonts/OpenSans-Bold.ttf") format("truetype");
@@ -30,11 +31,12 @@ html {
 }
 
 :root {
-  --font-size-xl: 3.214rem;
-  --font-size-l: 1.785rem;
-  --font-size-m: 1rem;
+  --font-size-xl: 3rem;
+  --font-size-l: 1.5rem;
+  --font-size-m: 1.1rem;
   --font-size-sm: 0.875rem;
   --primary-color: #26C17E;
+  --hover-color:hsl(88, 62%, 37%);
   --secondary-color: #222935;
   --inactive-color: #667081;
 
@@ -42,6 +44,8 @@ html {
   --text-color:#888888;
   --color-active:#829769;
   --text-hover-color:#a8a8a8;
+  // --text-hover-color:white;
+
   --cell-black: #B58863;
   --cell-white: #F0D9B5;
 }
@@ -52,3 +56,7 @@ body {
   background-color: var(--background-color);
   font-size: var(--font-size-m);
 }/*# sourceMappingURL=main.css.map */
+
+ul{
+  list-style-type: none;
+}
