--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -1,13 +1,30 @@
 .navigation {
     display: flex;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
     width: 100%;
     height: 70px;
     justify-content: space-between;
     padding: 10px 10px;
-
-
-    &__logo {
+    background: linear-gradient(to bottom, #37302d 20%, #1A1815 90%);
+    z-index: 1000;
+    &.is-hidden {
+        opacity: 0;
+        -webkit-transform: translate(0, -70px);
+        transform: translate(0,-70px);
+        transition: .3s ease;
     }
+
+    &.is-visible {
+        opacity: 1;
+        -webkit-transform: translate(0, 0);
+        transform: translate(0,0);
+        transition: .3s ease;
+    }
+
+    &__logo {}
 
     &__menu {
         display: flex;
@@ -44,6 +61,7 @@
             color: var(--text-color);
             gap: 10px;
             cursor: pointer;
+
             h4 {
                 font-size: var(--font-size-m);
                 color: inherit;
