--- a/src/pages/SIgnUp/styles.scss
+++ b/src/pages/SIgnUp/styles.scss
@@ -1,10 +1,14 @@
 .sign-up{
     position: relative;
     width: 100%;
-    height:calc(100vh - 70px) ;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 100px;    
     &__form-cont{
-        position: absolute;
-        left: 50%;
+        position: relative;
+        // top: 10%;
+        // left: 50%;
+        // transform: translateX(-50%);
         width: 600px;
         height: fit-content;
         padding: 50px 70px;
@@ -49,6 +53,12 @@
                 }
             }
         }
+        &__agreement{
+            svg{
+                color: white;
+            }
+        }
+      
     }
 }
 // .sign-in__form-cont__btn{
