--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,9 +29,13 @@ html {
   font-size: 16px;
   scroll-behavior: smooth;
 }
+//70px - navbar height
+main{
+  margin-top: 100px;
+}
 
 :root {
-  --font-size-xl: 3rem;
+  --font-size-xl: 2.3rem;
   --font-size-l: 1.5rem;
   --font-size-m: 1.1rem;
   --font-size-sm: 0.875rem;
@@ -41,7 +45,7 @@ html {
   --inactive-color: #667081;
 
   --background-color:#1A1815;
-  --text-color:#888888;
+  --text-color:hsl(0, 0%, 73%);
   --color-active:#829769;
   --text-hover-color:#a8a8a8;
   // --text-hover-color:white;
@@ -55,6 +59,9 @@ body {
   color: var(--text-color);
   background-color: var(--background-color);
   font-size: var(--font-size-m);
+  background: linear-gradient(to bottom, #37302d 0%, #1A1815 6%);
+
+
 }/*# sourceMappingURL=main.css.map */
 
 ul{
